--- a/ESCenter.Domain/ESCenter.Domain.csproj
+++ b/ESCenter.Domain/ESCenter.Domain.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Specifications\Discoveries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ESCenter.Domain.Shared\ESCenter.Domain.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
