--- a/ESCenter.Api/ESCenter.Api.csproj
+++ b/ESCenter.Api/ESCenter.Api.csproj
@@ -9,6 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ESCenter.Host\ESCenter.Host.csproj" />
   </ItemGroup>
 
 </Project>
