--- a/ESCenter.Api/appsettings.json
+++ b/ESCenter.Api/appsettings.json
@@ -5,5 +5,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection1": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_3; Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection":
+    "workstation id=CED_Database.mssql.somee.com;packet size=4096;user id=Matty_SQLLogin_1;pwd=rg12f5urma;data source=CED_Database.mssql.somee.com;persist security info=False;initial catalog=CED_Database; TrustServerCertificate=True;",
+  },
+  "JwtSettings": {
+    "Secret": "CED-super-secret-key",
+    "ExpiryMinutes": "600",
+    "Issuer": "CED-Developer",
+    "Audience": "CED-Developer"
+  },
+  "CloudinarySettings": {
+    "CloudName": "dhehywasc",
+    "ApiSecret": "rLK0_3DfGSRNmBh91DWEacZO9AE",
+    "ApiKey": "257198759123975"
+  },
+  "EmailSettingNames": {
+    "Email": "center.edusmart@gmail.com",
+    "Password": "ynrmnyirlrwetwcg",
+    "TimeSpan": "24",
+    "SmtpClient": "smtp.gmail.com",
+    "Port": "587",
+    "EnableSsl": "true",
+    "UseDefaultCredentials": "false"
+  }
 }
