--- a/ESCenter.Application/ESCenter.Application.csproj
+++ b/ESCenter.Application/ESCenter.Application.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ESCenter.Application.Contract\ESCenter.Application.Contract.csproj" />
     <ProjectReference Include="..\ESCenter.Domain\ESCenter.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Contract\" />
   </ItemGroup>
 
 </Project>
