--- a/ESCenter.Host/ESCenter.Host.csproj
+++ b/ESCenter.Host/ESCenter.Host.csproj
@@ -7,11 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ESCenter.Application.Contract\ESCenter.Application.Contract.csproj" />
-      <ProjectReference Include="..\ESCenter.Application\ESCenter.Application.csproj" />
-      <ProjectReference Include="..\ESCenter.Domain\ESCenter.Domain.csproj" />
-      <ProjectReference Include="..\ESCenter.Infrastructure\ESCenter.Infrastructure.csproj" />
-      <ProjectReference Include="..\ESCenter.Persistence\ESCenter.Persistence.csproj" />
+      <ProjectReference Include="..\ESCenter.Application\ESCenter.Application.csproj"/>
+      <ProjectReference Include="..\ESCenter.Infrastructure\ESCenter.Infrastructure.csproj" PrivateAssets="compile"/>
+      <ProjectReference Include="..\ESCenter.Persistence\ESCenter.Persistence.csproj" PrivateAssets="compile"/>
     </ItemGroup>
 
 </Project>
