--- a/ESCenter.DbMigrator/ESCenter.DbMigrator.csproj
+++ b/ESCenter.DbMigrator/ESCenter.DbMigrator.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ESCenter.Domain\ESCenter.Domain.csproj" />
+    <ProjectReference Include="..\ESCenter.Persistence\ESCenter.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
