--- a/ESCenter.Administrator/appsettings.json
+++ b/ESCenter.Administrator/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_3; Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_4; Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
-    "Secret": "CED-super-secret-key",
+    "Secret": "CED-super-secret-key-but-not-so-secret",
     "ExpiryMinutes": "480",
     "Issuer": "CED-Developer",
     "Audience": "CED-Developer"
