--- a/ESCenter.Application/ESCenter.Application.csproj
+++ b/ESCenter.Application/ESCenter.Application.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
         <Folder Include="Contracts\"/>
+        <Folder Include="ServiceImpls\Clients\TutorProfiles\Commands\" />
     </ItemGroup>
 
 </Project>
