--- a/ESCenter.Application/ESCenter.Application.csproj
+++ b/ESCenter.Application/ESCenter.Application.csproj
@@ -15,4 +15,8 @@
         <Folder Include="Contracts\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
+    </ItemGroup>
+    
 </Project>
