Fix bugs and working on aspnet mvc client

--- a/ESCenter.Client/appsettings.json
+++ b/ESCenter.Client/appsettings.json
@@ -4,5 +4,28 @@
       "Default": "None"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=abcdavid-knguyen.ddns.net,30019;Database=es_mssql1;TrustServerCertificate=True;User Id=sa;Password=LHQuy12@306lkjh?;MultipleActiveResultSets=true"
+  },
+  "JwtSettings": {
+    "Secret": "CED-super-secret-key-but-not-so-secret",
+    "ExpiryMinutes": "480",
+    "Issuer": "CED-Developer",
+    "Audience": "CED-Developer"
+  },
+  "CloudinarySettings": {
+    "CloudName": "dhehywasc",
+    "ApiSecret": "rLK0_3DfGSRNmBh91DWEacZO9AE",
+    "ApiKey": "257198759123975"
+  },
+  "EmailSettingNames": {
+    "Email": "center.edusmart@gmail.com",
+    "Password": "ynrmnyirlrwetwcg",
+    "TimeSpan": "24",
+    "SmtpClient": "smtp.gmail.com",
+    "Port": "587",
+    "EnableSsl": "true",
+    "UseDefaultCredentials": "false"
+  }
 }
