--- a/ESCenter.Client/appsettings.json
+++ b/ESCenter.Client/appsettings.json
@@ -6,7 +6,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=abcdavid-knguyen.ddns.net,30019;Database=es_mssql1;TrustServerCertificate=True;User Id=sa;Password=LHQuy12@306lkjh?;MultipleActiveResultSets=true"
+    "DefaultConnection1": "Server=abcdavid-knguyen.ddns.net,30019;Database=es_mssql1;TrustServerCertificate=True;User Id=sa;Password=LHQuy12@306lkjh?;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_5; Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
     "Secret": "CED-super-secret-key-but-not-so-secret",
