--- a/ESCenter.Administrator/appsettings.json
+++ b/ESCenter.Administrator/appsettings.json
@@ -1,15 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "None",
+      "Default": "None"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_4; Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=abcdavid-knguyen.ddns.net,30019;Database=es_mssql2;TrustServerCertificate=True;User Id=sa;Password=LHQuy12@306lkjh?;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
-    "Secret": "CED-super-secret-key-but-not-so-secret",
+    "Secret": "tQ3SGNzSvztzAZfhb9vmqJ/L44KzafQxGn40sjz9rSo=",
     "ExpiryMinutes": "6000",
     "Issuer": "CED-Developer",
     "Audience": "CED-Developer"
