--- a/ESCenter.Administrator/appsettings.json
+++ b/ESCenter.Administrator/appsettings.json
@@ -1,9 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "None"
-    }
-  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=abcdavid-knguyen.ddns.net,30019;Database=es_mssql2;TrustServerCertificate=True;User Id=sa;Password=LHQuy12@306lkjh?;MultipleActiveResultSets=true"
@@ -27,5 +22,27 @@
     "Port": "587",
     "EnableSsl": "true",
     "UseDefaultCredentials": "false"
+  },
+  "Serilog": {
+    "Using": ["Serilog.Sinks.File", "Serilog.Sinks.Console"],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [{
+      "Name": "Console"
+    }, {
+      "Name": "File",
+      "Args": {
+        "path": "/logs/log-.txt",
+        "rollOnFileSizeLimit": true,
+        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter,Serilog.Formatting.Compact",
+        "rollingInterval": "Day"
+      }
+    }],
+    "Enrich": ["FromLogContext", "WithThreadId", "WithMachineName"]
   }
 }
