Fix bugs and update logging profile

--- a/ESCenter.Api/appsettings.json
+++ b/ESCenter.Api/appsettings.json
@@ -6,8 +6,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection1": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_5; Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=abcdavid-knguyen.ddns.net,30019;Database=es_mssql2;TrustServerCertificate=True;User Id=sa;Password=LHQuy12@306lkjh?;MultipleActiveResultSets=true"
+    "DefaultConnection1": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_5; Trusted_Connection=True;",
+    "DefaultConnection": "Server=abcdavid-knguyen.ddns.net,30019;Database=es_mssql2;TrustServerCertificate=True;User Id=sa;Password=LHQuy12@306lkjh?;"
   },
   "JwtSettings": {
     "Secret": "g~!vb{mEhsdQ3[t/Cj]zA>HWZ*:xKcfr",
@@ -34,8 +34,8 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
+        "Microsoft": "Information",
+        "System": "Information"
       }
     },
     "WriteTo": [
@@ -50,6 +50,6 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ]
   }
 }
