--- a/ESCenter.Client.Application/ESCenter.Client.Application.csproj
+++ b/ESCenter.Client.Application/ESCenter.Client.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\ESCenter.Application\ESCenter.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="EventHandlers\" />
+    </ItemGroup>
+
 </Project>
