working on manage staff

--- a/ESCenter.Admin.Application/ESCenter.Admin.Application.csproj
+++ b/ESCenter.Admin.Application/ESCenter.Admin.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\ESCenter.Application\ESCenter.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ServiceImpls\Staffs\Queries\" />
+    </ItemGroup>
+
 </Project>
