--- a/ESCenter.Api/ESCenter.Api.csproj
+++ b/ESCenter.Api/ESCenter.Api.csproj
@@ -7,16 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.2-dev-00334" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ESCenter.Mobile.Host\ESCenter.Mobile.Host.csproj" />
+    <Folder Include="logs\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="logs\" />
+    <ProjectReference Include="..\ESCenter.Host\ESCenter.Host.csproj" />
+    <ProjectReference Include="..\ESCenter.Infrastructure\ESCenter.Infrastructure.csproj" />
+    <ProjectReference Include="..\ESCenter.Mobile.Application\ESCenter.Mobile.Application.csproj" />
+    <ProjectReference Include="..\ESCenter.Persistence\ESCenter.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
