--- a/ESCenter.Api/appsettings.json
+++ b/ESCenter.Api/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection1": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_6; Trusted_Connection=True;",
-    "DefaultConnection": "Server=abcdavid-knguyen.ddns.net,30019;Database=es_mssql1;TrustServerCertificate=True;User Id=sa;Password=LHQuy12@306lkjh?;"
+    "DefaultConnection": "Server=abcdavid-knguyen.ddns.net,30009;Database=es_mssql1;TrustServerCertificate=True;User Id=SA;Password=Devopsnhucc?#@Quy69420;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
     "Secret": "g~!vb{mEhsdQ3[t/Cj]zA>HWZ*:xKcfr",
@@ -30,7 +30,10 @@
     "UseDefaultCredentials": "false"
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -39,7 +42,9 @@
       }
     },
     "WriteTo": [
-      { "Name": "Console" },
+      {
+        "Name": "Console"
+      },
       {
         "Name": "File",
         "Args": {
@@ -50,6 +55,11 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ]
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ]
   }
 }
