--- a/ESCenter.Api/Dockerfile
+++ b/ESCenter.Api/Dockerfile
@@ -32,4 +32,4 @@ RUN dotnet publish "ESCenter.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "ESCenter.Api.dll"]
+ENTRYPOINT ["ESCenter.Api"]
