--- a/ESCenter.Api/appsettings.json
+++ b/ESCenter.Api/appsettings.json
@@ -6,8 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection1": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_6; Trusted_Connection=True;",
-    "DefaultConnection": "Server=abcdavid-knguyen.ddns.net,30009;Database=es_mssql1;TrustServerCertificate=True;User Id=SA;Password=Devopsnhucc?#@Quy69420;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=homelab-quy.duckdns.org,1433;Database=es_mssql;TrustServerCertificate=True;User Id=sa;Password=1q2w3E**;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
     "Secret": "g~!vb{mEhsdQ3[t/Cj]zA>HWZ*:xKcfr",
