update tutor requests

--- a/ESCenter.Administrator/appsettings.json
+++ b/ESCenter.Administrator/appsettings.json
@@ -1,8 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection1": "Server=abcdavid-knguyen.ddns.net,30019;Database=es_mssql2;TrustServerCertificate=True;User Id=sa;Password=LHQuy12@306lkjh?;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_6; Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_6; Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
     "Secret": "tQ3SGNzSvztzAZfhb9vmqJ/L44KzafQxGn40sjz9rSo=",
