update get tutors on api

--- a/ESCenter.Api/appsettings.json
+++ b/ESCenter.Api/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=homelab-quy.duckdns.org,1433;Database=es_mssql;TrustServerCertificate=True;User Id=sa;Password=1q2w3E**;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_6; Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
     "Secret": "g~!vb{mEhsdQ3[t/Cj]zA>HWZ*:xKcfr",
