fix bug on update tutor info, get learning detail

--- a/ESCenter.Domain/ESCenter.Domain.csproj
+++ b/ESCenter.Domain/ESCenter.Domain.csproj
@@ -9,5 +9,9 @@
   <ItemGroup>
     <ProjectReference Include="..\ESCenter.Domain.Shared\ESCenter.Domain.Shared.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Aggregates\PurchaseLog\" />
+  </ItemGroup>
   
 </Project>
