fix bugs on client

--- a/ESCenter.DbMigrator/ESCenter.DbMigrator.csproj
+++ b/ESCenter.DbMigrator/ESCenter.DbMigrator.csproj
@@ -33,4 +33,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.5.1" />
+  </ItemGroup>
+
 </Project>
