add new endpoint getting courses / tutors by ids

--- a/ESCenter.Api/appsettings.json
+++ b/ESCenter.Api/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=matthomelab.dns.army,1433;Database=sql1;TrustServerCertificate=True;User Id=sa;Password=1q2w3E**;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=matthomelab.dns.army,1433;Database=esmssql;TrustServerCertificate=True;User Id=sa;Password=1q2w3E**;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
     "Secret": "g~!vb{mEhsdQ3[t/Cj]zA>HWZ*:xKcfr",
