--- a/ESCenter.Administrator/appsettings.json
+++ b/ESCenter.Administrator/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=EduSmart_1; Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=esmssql; Trusted_Connection=True;"
   },
   "JwtSettings": {
     "Secret": "tQ3SGNzSvztzAZfhb9vmqJ/L44KzafQxGn40sjz9rSo=",
