refactor code and fix bugs

--- a/ESCenter.Administrator/appsettings.json
+++ b/ESCenter.Administrator/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=esmssql; Trusted_Connection=True;"
+    "DefaultConnection": "Server=matthomelab.dns.army,1433;Database=esmssql;TrustServerCertificate=True;User Id=sa;Password=1q2w3E**;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
     "Secret": "tQ3SGNzSvztzAZfhb9vmqJ/L44KzafQxGn40sjz9rSo=",
