--- a/ESCenter.Client/appsettings.json
+++ b/ESCenter.Client/appsettings.json
@@ -39,7 +39,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=matthomelab.dns.army,1433;Database=es_smql;TrustServerCertificate=True;User Id=sa;Password=1q2w3E**;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=matthomelab.dns.army,1433;Database=esmssql;TrustServerCertificate=True;User Id=sa;Password=1q2w3E**;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
     "Secret": "CED-super-secret-key-but-not-so-secret",
