--- a/ESCenter.Infrastructure/ESCenter.Infrastructure.csproj
+++ b/ESCenter.Infrastructure/ESCenter.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.25.0" />
+    <PackageReference Include="FirebaseAdmin" Version="3.0.0" />
     <PackageReference Include="FluentEmail.Smtp" Version="3.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
@@ -24,6 +25,12 @@
 
   <ItemGroup>
     <Folder Include="Commons\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="google-services.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
