--- a/ESCenter.Application/ESCenter.Application.csproj
+++ b/ESCenter.Application/ESCenter.Application.csproj
@@ -10,5 +10,9 @@
         <ProjectReference Include="..\ESCenter.Domain.Shared\ESCenter.Domain.Shared.csproj"/>
         <ProjectReference Include="..\ESCenter.Domain\ESCenter.Domain.csproj"/>
     </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FCM.Net.Core" Version="1.0.1" />
+    </ItemGroup>
     
 </Project>
